--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,21 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.navlink {
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+}
+
+.navlink--selected {
+	color: #FF0000;
+	font-weight: bold;
+}
+
+.view {
+	border: 1px solid black;
+	padding: 1rem;
+	max-width: 80%;
+	margin: 10px;
+}
